next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
-------------------------------------------------

- Fix mapscript php build issues with MSVC (#4004)

- PHP MapScript is missing many styleObj properties (#3901)

- PHP/Mapscript: Segmentation fault when getting complex object using PHP 5.2  (#3930)

- PHP/Mapscript: Fixed webObj->metadata returns a webObj (#3971)

- WCS 1.1: Added check for imageCRS in msOWSCommonBoundingBox() (#3966)

- Fixed contains operator in logical expresions (#3974)

- WCS 1.0: WCS Exceptions raise mapscript exceptions (#3972)

- WMS: LAYERS parameter is optional when sld is given (#1166)

- Add runtime substitution for "filename" output format option (#3571) and
  allow setting defaults in either metadata or validation (preferred) blocks
  for both layer and output format.

- Add non antialiased text rendering for GD (#3896)

- Fixed OGC filter using expressions (#3481)

- Fix incorrect rendering of GD lines between 1 and 2 pixels wide (#3962)

- Add gamma correction to AGG polygon rendering (#3165)

- Initialize the scalebar image color to transparent by default (#3957)

IMPORTANT SECURITY FIX:

-  Fixes to prevent SQL injections through OGC filter encoding (in WMS, WFS 
   and SOS), as well as a potential SQL injection in WMS time support. 
   Your system may be vulnerable if it has MapServer with OGC protocols 
   enabled, with layers connecting to an SQL RDBMS backend, either 
   natively or via OGR (#3903)

- Fix performance issue with Oracle and scrollable cursors (#3905)

- Fix attribute binding for layer styles (#3941)

- Added missing fclose() when writing query files (#3943)

- Fix double-free in msAddImageSymbol() when filename is a http resource (#3939)
